exports[`prefer-mock-call-count > invalid(1): import test from 'node:test';\nconst spy = test.mock.fn();\nassert.equal(spy.mock.calls.length, 1); 1`] = `

  1 | import test from 'node:test';
  2 | const spy = test.mock.fn();
  3 | assert.equal(spy.mock.calls.length, 1);

`;

exports[`prefer-mock-call-count > invalid(1): import test from 'node:test';\nconst spy = test.mock.fn();\nassert.equal(spy.mock.calls.length, 1); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | const spy = test.mock.fn();
> 3 | assert.equal(spy.mock.calls.length, 1);
    |              ^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | const spy = test.mock.fn();
  3 | assert.equal(spy.mock.callCount(), 1);

`;

exports[`prefer-mock-call-count > invalid(10): import test from 'node:test';\n(spy.mock.calls.length as number); 1`] = `

  1 | import test from 'node:test';
  2 | (spy.mock.calls.length as number);

`;

exports[`prefer-mock-call-count > invalid(10): import test from 'node:test';\n(spy.mock.calls.length as number); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | (spy.mock.calls.length as number);
    |  ^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | (spy.mock.callCount() as number);

`;

exports[`prefer-mock-call-count > invalid(11): import test from 'node:test';\n({[spy.mock.calls.length]: value} = source); 1`] = `

  1 | import test from 'node:test';
  2 | ({[spy.mock.calls.length]: value} = source);

`;

exports[`prefer-mock-call-count > invalid(11): import test from 'node:test';\n({[spy.mock.calls.length]: value} = source); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | ({[spy.mock.calls.length]: value} = source);
    |    ^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | ({[spy.mock.callCount()]: value} = source);

`;

exports[`prefer-mock-call-count > invalid(12): import test from 'node:test';\n({value = spy.mock.calls.length} = source); 1`] = `

  1 | import test from 'node:test';
  2 | ({value = spy.mock.calls.length} = source);

`;

exports[`prefer-mock-call-count > invalid(12): import test from 'node:test';\n({value = spy.mock.calls.length} = source); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | ({value = spy.mock.calls.length} = source);
    |           ^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | ({value = spy.mock.callCount()} = source);

`;

exports[`prefer-mock-call-count > invalid(13): import test from 'node:test';\nconst fake = {mock: {calls: []}};\nfake.mock.calls.length; 1`] = `

  1 | import test from 'node:test';
  2 | const fake = {mock: {calls: []}};
  3 | fake.mock.calls.length;

`;

exports[`prefer-mock-call-count > invalid(13): import test from 'node:test';\nconst fake = {mock: {calls: []}};\nfake.mock.calls.length; 2`] = `

Message:
  1 | import test from 'node:test';
  2 | const fake = {mock: {calls: []}};
> 3 | fake.mock.calls.length;
    | ^^^^^^^^^^^^^^^^^^^^^^ Prefer \`fake.mock.callCount()\` over \`fake.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | const fake = {mock: {calls: []}};
  3 | fake.mock.callCount();

`;

exports[`prefer-mock-call-count > invalid(14): import test from 'node:test';\nspy.mock /* comment */ .calls.length; 1`] = `

  1 | import test from 'node:test';
  2 | spy.mock /* comment */ .calls.length;

`;

exports[`prefer-mock-call-count > invalid(14): import test from 'node:test';\nspy.mock /* comment */ .calls.length; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | spy.mock /* comment */ .calls.length;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

`;

exports[`prefer-mock-call-count > invalid(15): import test from 'node:test';\nspy /* comment */ .mock.calls.length; 1`] = `

  1 | import test from 'node:test';
  2 | spy /* comment */ .mock.calls.length;

`;

exports[`prefer-mock-call-count > invalid(15): import test from 'node:test';\nspy /* comment */ .mock.calls.length; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | spy /* comment */ .mock.calls.length;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy /* comment */ .mock.callCount()\` over \`spy /* comment */ .mock.calls.length\`, which creates a copy of the call history.

`;

exports[`prefer-mock-call-count > invalid(16): import test from 'node:test';\n(/* before */ spy.mock).calls.length; 1`] = `

  1 | import test from 'node:test';
  2 | (/* before */ spy.mock).calls.length;

`;

exports[`prefer-mock-call-count > invalid(16): import test from 'node:test';\n(/* before */ spy.mock).calls.length; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | (/* before */ spy.mock).calls.length;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

`;

exports[`prefer-mock-call-count > invalid(2): import {mock} from 'node:test';\nconst spy = mock.fn();\nspy.mock.calls.length; 1`] = `

  1 | import {mock} from 'node:test';
  2 | const spy = mock.fn();
  3 | spy.mock.calls.length;

`;

exports[`prefer-mock-call-count > invalid(2): import {mock} from 'node:test';\nconst spy = mock.fn();\nspy.mock.calls.length; 2`] = `

Message:
  1 | import {mock} from 'node:test';
  2 | const spy = mock.fn();
> 3 | spy.mock.calls.length;
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import {mock} from 'node:test';
  2 | const spy = mock.fn();
  3 | spy.mock.callCount();

`;

exports[`prefer-mock-call-count > invalid(3): import * as nodeTest from 'node:test';\nconst spy = nodeTest.mock.fn();\nspy.mock.calls.length; 1`] = `

  1 | import * as nodeTest from 'node:test';
  2 | const spy = nodeTest.mock.fn();
  3 | spy.mock.calls.length;

`;

exports[`prefer-mock-call-count > invalid(3): import * as nodeTest from 'node:test';\nconst spy = nodeTest.mock.fn();\nspy.mock.calls.length; 2`] = `

Message:
  1 | import * as nodeTest from 'node:test';
  2 | const spy = nodeTest.mock.fn();
> 3 | spy.mock.calls.length;
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import * as nodeTest from 'node:test';
  2 | const spy = nodeTest.mock.fn();
  3 | spy.mock.callCount();

`;

exports[`prefer-mock-call-count > invalid(4): import test from 'node:test';\ntest.mock.fn().mock.calls.length; 1`] = `

  1 | import test from 'node:test';
  2 | test.mock.fn().mock.calls.length;

`;

exports[`prefer-mock-call-count > invalid(4): import test from 'node:test';\ntest.mock.fn().mock.calls.length; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test.mock.fn().mock.calls.length;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`test.mock.fn().mock.callCount()\` over \`test.mock.fn().mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | test.mock.fn().mock.callCount();

`;

exports[`prefer-mock-call-count > invalid(5): import test from 'node:test';\nobject.method.mock.calls.length; 1`] = `

  1 | import test from 'node:test';
  2 | object.method.mock.calls.length;

`;

exports[`prefer-mock-call-count > invalid(5): import test from 'node:test';\nobject.method.mock.calls.length; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | object.method.mock.calls.length;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`object.method.mock.callCount()\` over \`object.method.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | object.method.mock.callCount();

`;

exports[`prefer-mock-call-count > invalid(6): import test from 'node:test';\nString(spy.mock.calls.length); 1`] = `

  1 | import test from 'node:test';
  2 | String(spy.mock.calls.length);

`;

exports[`prefer-mock-call-count > invalid(6): import test from 'node:test';\nString(spy.mock.calls.length); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | String(spy.mock.calls.length);
    |        ^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | String(spy.mock.callCount());

`;

exports[`prefer-mock-call-count > invalid(7): import test from 'node:test';\nspy.mock.calls.length?.toString(); 1`] = `

  1 | import test from 'node:test';
  2 | spy.mock.calls.length?.toString();

`;

exports[`prefer-mock-call-count > invalid(7): import test from 'node:test';\nspy.mock.calls.length?.toString(); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | spy.mock.calls.length?.toString();
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | spy.mock.callCount()?.toString();

`;

exports[`prefer-mock-call-count > invalid(8): import test from 'node:test';\n(spy.mock.calls).length; 1`] = `

  1 | import test from 'node:test';
  2 | (spy.mock.calls).length;

`;

exports[`prefer-mock-call-count > invalid(8): import test from 'node:test';\n(spy.mock.calls).length; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | (spy.mock.calls).length;
    | ^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | spy.mock.callCount();

`;

exports[`prefer-mock-call-count > invalid(9): import test from 'node:test';\nspy.mock.calls.length /* trailing comment */; 1`] = `

  1 | import test from 'node:test';
  2 | spy.mock.calls.length /* trailing comment */;

`;

exports[`prefer-mock-call-count > invalid(9): import test from 'node:test';\nspy.mock.calls.length /* trailing comment */; 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | spy.mock.calls.length /* trailing comment */;
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`spy.mock.callCount()\` over \`spy.mock.calls.length\`, which creates a copy of the call history.

Output:
  1 | import test from 'node:test';
  2 | spy.mock.callCount() /* trailing comment */;

`;
